
java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    shadow implementation('org.apache.maven:maven-artifact:3.9.1')
    shadow api('org.apache.commons:commons-lang3:3.12.0')
    shadow api('commons-io:commons-io:2.13.0')
    shadow api('com.google.guava:guava:32.0.0-jre')
    shadow api('com.google.code.gson:gson:2.10.1')
    shadow api('org.slf4j:slf4j-api:2.0.7')
    shadow api('org.bstats:bstats-base:3.0.2')
    
    shadow api('org.spongepowered:configurate-core:4.1.2')
    shadow implementation('org.spongepowered:configurate-gson:4.1.2')
    shadow api('org.spongepowered:configurate-yaml:4.1.2')
    shadow implementation('org.spongepowered:configurate-hocon:4.1.2')
    
    compileOnly('org.mongodb:mongodb-driver-sync:4.9.1')
    compileOnly('com.zaxxer:HikariCP:4.0.3')
    compileOnly('com.h2database:h2:2.1.214')
    compileOnly('org.xerial:sqlite-jdbc:3.46.0.0')
    compileOnly('org.mariadb.jdbc:mariadb-java-client:3.4.0')
    compileOnly('com.mysql:mysql-connector-j:8.4.0')
}

shadowJar {
    archiveClassifier.set("common")

    relocate 'org.spongepowered', 'com.gmail.picono435.picojobs.libs.org.spongepowered'
    relocate 'org.apache', 'com.gmail.picono435.picojobs.libs.org.apache'
    relocate 'org.bstats', 'com.gmail.picono435.picojobs.libs.org.bstats'
    relocate 'org.checkerframework', 'com.gmail.picono435.picojobs.libs.org.checkerframework'
    relocate 'org.codehaus', 'com.gmail.picono435.picojobs.libs.org.codehaus'
    relocate 'org.yaml', 'com.gmail.picono435.picojobs.libs.org.yaml'
    relocate 'com.google', 'com.gmail.picono435.picojobs.libs.com.google'
    relocate 'com.typesafe', 'com.gmail.picono435.picojobs.libs.com.typesafe'
    relocate 'google', 'com.gmail.picono435.picojobs.libs.google'
    relocate 'javax', 'com.gmail.picono435.picojobs.libs.javax'
    relocate 'waffle', 'com.gmail.picono435.picojobs.libs.javax'
    relocate 'io', 'com.gmail.picono435.picojobs.libs.io'
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}


assemble.dependsOn shadowJar